k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trippy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trippy-backend
  template:
    metadata:
      labels:
        app: trippy-backend
    spec:
      containers:
        - name: trippy-backend
          image: ghcr.io/homelab1025/trippy-planner-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: metrics
