k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trippy-planner
spec:
  selector:
    matchLabels:
      app: trippy-planner
  template:
    metadata:
      labels:
        app: trippy-planner
    spec:
      containers:
      - name: trippy-planner
        image: trippy-planner:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
