k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trippy-planner
spec:
  selector:
    app: trippy-planner
  ports:
  - port: 80
    targetPort: 80
    name: http
