k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trippy-planner-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: trippy.lab.wicked
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trippy-planner
                port:
                  number: 80
    - host: trippy.homelab1025.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trippy-planner
                port:
                  number: 80
